ajouts infos perso

--- a/home.html
+++ b/home.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CV en ligne - [Prénom Nom]</title>
+    <title>CV en ligne - Nathan ANDREO</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&family=Playfair+Display:ital,wght@0,500;0,700;1,500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     
@@ -263,9 +263,9 @@
             <p style="color: var(--text-muted); margin-bottom: 1rem;">Parcours Développeur Full Stack - La Rochelle</p>
             
             <div class="contact-info">
-                <span><i class="fas fa-envelope"></i> [Votre Mail]</span>
-                <span><i class="fas fa-phone"></i> [Votre Numéro de tel]</span>
-                <span><i class="fas fa-map-marker-alt"></i> [Votre Adresse]</span>
+                <span><i class="fas fa-envelope"></i>nathanandreo@gmail.com</span>
+                <span><i class="fas fa-phone"></i>07 71 81 66 51</span>
+                <span><i class="fas fa-map-marker-alt"></i>5 Hauteville, 86340 Nieuil l'Espoir</span>
                 <span><i class="fas fa-car"></i> Permis B + Véhicule</span>
             </div>
         </div>
