ajouts infos perso

--- a/home.html
+++ b/home.html
@@ -253,10 +253,10 @@
         <div class="hero-content reveal">
             
             <div class="profile-wrapper">
-                <div class="profile-img-div" aria-label="Photo de profil de [Prénom Nom]" role="img"></div>
+                <div class="profile-img-div" aria-label="Photo de profil de Nathan ANDREO" role="img"></div>
             </div>
 
-            <h1>[Prénom Nom]</h1>
+            <h1>Nathan ANDREO</h1>
             <h2>Étudiant BUT Informatique 3ème année • En alternance</h2>
             <div class="badge-master">À la recherche d'un Master pour la rentrée prochaine</div>
             
@@ -511,7 +511,7 @@
     </section>
 
     <footer>
-        <p>© 2026 - [Prénom Nom] - Développeur Full Stack</p>
+        <p>© 2026 - Nathan Andreo - Développeur Full Stack</p>
     </footer>
 
     <script>
