ajout de la ville de la rochelle alternance

--- a/home.html
+++ b/home.html
@@ -324,7 +324,7 @@
                 <div class="timeline-date">Septembre 2025 - Actuellement</div>
                 <div class="timeline-content">
                     <h3>Alternant Développeur Full Stack</h3>
-                    <h4>TRIBOFILM - [Ville]</h4>
+                    <h4>TRIBOFILM - La Rochelle</h4>
                     <p>Développement sur <strong>Mainti4</strong>, logiciel de Gestion de Maintenance Assistée par Ordinateur (GMAO).<br>
                     • Évolution fonctionnelle et technique, correction de bugs.<br>
                     • Analyse des besoins clients (fonctionnelle et technique).<br>
