rajout du cycle ingénieur

--- a/home.html
+++ b/home.html
@@ -258,7 +258,7 @@
 
             <h1>Nathan ANDREO</h1>
             <h2>Étudiant BUT Informatique 3ème année • En alternance</h2>
-            <div class="badge-master">À la recherche d'un Master pour la rentrée prochaine</div>
+            <div class="badge-master">À la recherche d'un Master ou Cycle Ingénieur pour la rentrée prochaine</div>
             
             <p style="color: var(--text-muted); margin-bottom: 1rem;">Parcours Développeur Full Stack - La Rochelle</p>
             
